Freedom Sanbox Ant Deploy/src/objects/Conveyance_Detail__c.object
<CustomObject>
    <fields>
        <fullName>Amount__c</fullName>
        <label>Amount</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Bill_Details__c</fullName>
        <label>Bill Details</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Bill_Number__c</fullName>
        <label>Bill Number</label>
        <precision>12</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Conveyance_Manager__c</fullName>
        <label>Conveyance Manager</label>
        <referenceTo>Conveyance_Manager__c</referenceTo>
        <relationshipLabel>Conveyance_Details</relationshipLabel>
        <relationshipName>Conveyance_Details</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Is_Bill_Available__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Bill Available</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Remarks__c</fullName>
        <label>Remarks</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Conveyance_Detail</label>
    <nameField>
        <label>Conveyance_Detail Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Conveyance_Details</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>